--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      maxdan777@mail.ru
+      max777dan@gmail.com
     </header>
 
     <div class="container">
