--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
   <body>
     <header class="page-header">
-      max777dan@gmail.com
-    </header>
+      <div class="container">
+        <a class="header-email"
+        href="mailto:maxdan777@mail.ru">maxdan777@mail.ru</a>
+        <a klass="header-phone"
+        href="tel:+79208837803">+7 920 883 78 03</a>
+      </div>    </header>
 
     <div class="container">
       <section class="hero-image">
@@ -22,6 +26,9 @@
     <div class="container">
       <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure klass="user-image">
+        <img src="files/user777.jpg" width="928" alt="Фотография Неопознанного Енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -32,17 +39,22 @@
     <div class="container">
       <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
-
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </section>
   </div>
 
     <footer class="page-footer">
-      Контакты в подвале
+      <div class="container">
+        <a class="footer-email" href="mailto:maxdan777@mail.ru">maxdan777@mail.ru</a>
+        <a class="footer-phone" href="tel:+79208837803">+7 920 883 78 03</a>
+      </div>
     </footer>
   </body>
 </html>
