--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior верстальщика Рытика Максима</title>
+    <title>Портфолио Junior верстальщика Данилы</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
 
     <div class="container">
       <section class="hero-image">
-      <h1 class="heading">Рытик Максим</h1>
+      <h1 class="heading">Данила</h1>
            <p>Junior верстальщик</p>
       </section>
     </div>
