--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="page-header">
       <div class="container">
         <a class="header-email"
-        href="mailto:maxdan777@mail.ru">maxdan777@mail.ru</a>
+        href="mailto:maxdan@mail.ru">maxdan@mail.ru</a>
         <a klass="header-phone"
-        href="tel:+79208837803">+7 920 883 78 03</a>
+        href="tel:+7920883">+7 920 883</a>
       </div>    </header>
 
     <div class="container">
@@ -52,8 +52,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="footer-email" href="mailto:maxdan777@mail.ru">maxdan777@mail.ru</a>
-        <a class="footer-phone" href="tel:+79208837803">+7 920 883 78 03</a>
+        <a class="footer-email" href="mailto:maxdan@mail.ru">maxdan@mail.ru</a>
+        <a class="footer-phone" href="tel:+7920883">+7 920 883</a>
       </div>
     </footer>
   </body>
